// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Kameleoon's identify destination action: all fields 1`] = `
Object {
  "anonymousId": "RdhEeD",
  "messageId": "RdhEeD",
  "properties": Object {
    "kameleoonVisitorCode": "RdhEeD",
    "testType": "RdhEeD",
  },
  "timestamp": "2083-02-01T23:25:03.398Z",
  "userId": "RdhEeD",
}
`;

exports[`Testing snapshot for Kameleoon's identify destination action: required fields 1`] = `
Object {
  "messageId": "RdhEeD",
  "properties": Object {},
  "timestamp": "2083-02-01T23:25:03.398Z",
}
`;
